# kestrel

./: Expired-Patents.csv  Kestrel-Plan.md  pyproject.toml
docs/: index.html
kestrel/: __init__.py  __main__.py  cli.py  gui.py  plugins.py  process.py  schematic.py  spec.py
kestrel/design/: engine.py
kestrel/generators/pll/: engine.py  kestrel_plugin.py
kestrel/generators/pll/models/: behavioral.py  schematic.py  spice.py  verilog_ams.py
kestrel/models/: behavioral.py  schematic.py  spice.py  verilog_ams.py
kestrel/models/templates/: pll_behavioral.cir-template  pll_behavioral.kicad_sch-template
layout/: compare.py  extract.py  gds_gen.py  iterate.py  kestrel_pll.gds  kestrel_pll_flat_extracted.cir  parasitics.py  spice_loop.py
sch/: gen_delay_cell.py  kes_vco_delay_cell.kicad_pro  kes_vco_delay_cell.kicad_sch
sim/: kes_cp.va  kes_lf.va  kes_run_beh.sp  kes_tb_beh.sp  kes_vco.va  kes_vco_xyce.cir  kes_vco_xyce_sg13g2.cir  vco_range.sh
sim/models/: sg13g2_psp103_tt.lib  sky130_nfet_xyce.spice  sky130_pfet_xyce.spice
sim/opt/: backends.py  best_vco.cir  config.yaml  kes_vco_refit.va  opt_log.csv  optimize_vco.py  refit_params.yaml
tests/: test_behavioral.py
